--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 blinker==1.4
+certifi==2018.10.15
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
+googlemaps==3.0.2
+idna==2.7
 itsdangerous==0.24
-Jinja2==2.10a
+Jinja2==2.10
 MarkupSafe==1.0
+pkg-resources==0.0.0
 psycopg2==2.7.5
+requests==2.20.0
 SQLAlchemy==1.2.8
+urllib3==1.24.1
 Werkzeug==0.14.1
